--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
       "Devtia\\MaintenanceBundle\\": "src/"
     }
   },
-  "require": {}
+  "require": {
+    "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0",
+    "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0"
+  }
 }
