--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,5 @@
       "Devtia\\MaintenanceBundle\\": "src/"
     }
   },
-  "require": {
-    "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0",
-    "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0"
-  }
+  "require": {}
 }
